2011-03-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Adjust programs that use the SEP to adapt to the new interface.

	* programs/benchmarks/benchmarks.h: `union placeinfo' instead of
	`struct placeinfo'.

	* programs/benchmarks/benchmarks.c: Use the new SEP interface. Use
	the new query interface to extract the number of cores.

	* programs/demo/sep.c,
	* programs/benchmarks/mandel/mandel.c,
	* programs/benchmarks/livermore/ll-generate.py: Use the new interface.
	
2011-03-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix to the benchmarking framework.

	* benchmarks/lib/benchmark.c: Define the `slr' variable `ncores'
	for backward compatibility, although it is not used any more.

2011-03-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New matrix-matrix multiplication benchmark.

	* matmul/Makefile.am,
	* matmul/matmul.c,
	* matmul/simple.c,
	* matmul/input.d10,
	* matmul/input.d30,
	* matmul/simple_d_10.c,
	* matmul/simple_f_10.c,
	* matmul/simple_l_10.c,
	* matmul/simple_d_30.c,
	* matmul/simple_f_30.c,
	* matmul/simple_l_30.c,
	* matmul/simple_d_var.c,
	* matmul/simple_f_var.c,
	* matmul/simple_l_var.c: New.

	* Makefile.am,
	* configure.ac: Update accordingly.

2011-03-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix some benchmarks.

	* benchmarks/lib/benchmark.c (run_benchmark): Initialize the
	`place' field for benchmarks that use the number of cores.

2011-03-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the version numbering.

	* configure.ac: Use the new script `git-version-gen' also used by
	sl-core.
	
	* build-aux/package-version: Remove, as this is now obsolete.

	* bootstrap: Fix the relative path to the `slc' sources.

2011-03-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow `-n' for benchmarks.

	* benchmarks/lib/benchmark.c: Do not self allocate a fresh
	place. Instead overload the `main' function and rely on
	`__main_place_id' to be allocated by the root SEP initially based
	on `-n'.
